<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    app:cardCornerRadius="10dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner

                android:id="@+id/spinner_virtual_calc"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_outline"
                android:dropDownWidth="300dp"
                android:spinnerMode="dropdown"
                tools:listitem="@layout/item_lesson" />

            <ImageButton
                style="@style/emojiImageView"
                android:id="@+id/ib_clear"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_outline"
                android:padding="12dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/reset"
                app:srcCompat="@drawable/ic_baseline_replay_24">

            </ImageButton>

        </LinearLayout>


        <ru.ndevelop.educlient.ui.custom_ui.ScrollViewWithMaxHeight
            android:id="@+id/sv_calc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <!--suppress AndroidUnresolvableTag -->
            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/flexbox_calculator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignContent="flex_start"
                app:alignItems="flex_start"
                app:flexWrap="wrap"
                app:justifyContent="flex_start" />


        </ru.ndevelop.educlient.ui.custom_ui.ScrollViewWithMaxHeight>

        <TextView
            android:id="@+id/tv_mark_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="Добавлено оценок:\n5: 0 шт.\n4: 0 шт.\n3: 0 шт.\n2: 0 шт.\n1: 0 шт."
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sv_calc" />
        <TextView
          android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_mark"
            android:textSize="24sp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mark_number"
            />

        <TextView
            android:id="@+id/tv_virtual_calc_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_horizontal"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_result"
            app:layout_constraintStart_toStartOf="@+id/tv_result"
            app:layout_constraintTop_toBottomOf="@id/tv_result" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_virtual_calc_result">

            <TextView
                android:id="@+id/btn_add_1"
                style="@style/MarkButtonTextView"
                android:background="@drawable/ic_mark_button"


                android:text="@string/number1" />

            <TextView
                android:id="@+id/btn_add_2"
                style="@style/MarkButtonTextView"
                android:background="@drawable/ic_mark_button"

                android:text="@string/number2" />

            <TextView
                android:id="@+id/btn_add_3"
                style="@style/MarkButtonTextView"
                android:background="@drawable/ic_mark_button"
                android:text="@string/number3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/btn_add_4"
                style="@style/MarkButtonTextView"
                android:background="@drawable/ic_mark_button"
                android:text="@string/number4" />


            <TextView
                android:id="@+id/btn_add_5"
                style="@style/MarkButtonTextView"
                android:background="@drawable/ic_mark_button"
                android:text="@string/number5" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>