<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    tools:context=".ui.calculators.CalculateFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16sp">

        <Spinner
            android:id="@+id/spinner_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_outline"
            android:dropDownWidth="300dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_lesson" />

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/spinner_table"
            tools:layout_editor_absoluteX="16dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_mark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_current_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="24sp"
                android:textStyle="bold"

                tools:text="4.6" />
        </LinearLayout>


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/wanted_mark"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll2" />

        <EditText
            android:id="@+id/et_wanted_mark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:labelFor="@id/et_wanted_mark"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:autofillHints="Желаемый балл" />

        <TextView
            android:id="@+id/tv_table_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_mark"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_wanted_mark" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_result_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="10dp"
            app:cardBackgroundColor="?attr/colorPrimary"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:textColor="@color/colorWhite"
                android:paddingBottom="10dp"
                android:text="@string/calculate_mark"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/number_of5"
            app:layout_constraintEnd_toEndOf="@+id/tv_table_result"
            app:layout_constraintStart_toStartOf="@+id/tv_table_result"
            app:layout_constraintTop_toBottomOf="@+id/tv_table_result" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>